--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <hr>
             </div>
 
-            <button class="btn btn-primary col-sm-2 col-sm-offset-3 col-xs-3 col-xs-offset-3 Dugme" onclick="Osvezi()">Osvezi</button>
+            <button class="btn btn-primary col-sm-2 col-sm-offset-3 col-xs-3 col-xs-offset-3 Dugme" onclick="Refresh()">Osvezi</button>
             <input class="col-xs-2 Input" type="number" name="KM" placeholder="Unesi kilometrazu" value="200"  id="JS-Range"/>
             <div class="opis col-xs-2"><p>Domet pretrage u KM</p>
 
